--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
       "<rootDir>/node_modules/@testing-library/jest-dom"
     ],
     "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+      "^axios$": "axios/dist/node/axios.cjs"
     }
   },
   "eslintConfig": {
