--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7",
-    "web-vitals": "^2.1.4",
-    "express": "^4.17.1",
-    "cors": "^2.8.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
