--- a/hangman-server/package.json
+++ b/hangman-server/package.json
@@ -14,5 +14,10 @@
     "express": "^4.21.1",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0"
   }
 }
