--- a/hangman-server/package.json
+++ b/hangman-server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix . "
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
   },
