--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -50,10 +50,10 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information for server
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN_BACKEND }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Server to Vercel
-        run: cd hangman-server && vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN_BACKEND }}
+        run: cd hangman-server && vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
 
   Deploy-Client:
     runs-on: ubuntu-latest
