--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -10,7 +10,7 @@ on:
       - dev
 
 jobs:
-  Deploy-Server:
+  Check-Server-Code:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -46,18 +46,29 @@ jobs:
           name: server-coverage-report
           path: hangman-server/coverage
 
-      - name: Install Vercel CLI for server
-        run: npm install --global vercel@latest
+  Check-Client-Code:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Pull Vercel Environment Information for server
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Set up Node.js for client
+        uses: actions/setup-node@v3
+        with:
+          node-version: '17'
 
-      - name: Deploy Server to Vercel
-        run: cd hangman-server && vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Install client dependencies
+        run: cd src && npm install
+
+      - name: Run ESLint for client
+        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
+
+      - name: Run client tests
+        run: cd src && npm run test -- --coverage
 
   Deploy-Client:
     runs-on: ubuntu-latest
-    needs: Deploy-Server  # Ensure the server is deployed before the client
+    needs: Check-Client-Code  # Ensure client code has passed checks
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -70,14 +81,10 @@ jobs:
       - name: Install client dependencies
         run: cd src && npm install
 
-      - name: Run ESLint for client
-        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
-
       - name: Build Project Artifacts for Client
         run: |
           cd src
-          # Replace <BACKEND_URL> with the actual URL of your backend service.
-          echo "REACT_APP_BACKEND_URL=${{ steps.deploy_server.outputs.backend_url }}" >> .env
+          echo "REACT_APP_BACKEND_URL=${{ secrets.BACKEND_URL }}" >> .env
           npm run build
 
       - name: Deploy Client to Vercel
