--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -10,7 +10,7 @@ on:
       - dev
 
 jobs:
-  Check-Server-Code:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -21,9 +21,12 @@ jobs:
         with:
           node-version: '17'
 
-      - name: Install server dependencies
-        run: cd hangman-server && npm install
+      - name: Install dependencies for server and client
+        run: |
+          cd hangman-server && npm install
+          cd ../src && npm install
 
+      # Server steps
       - name: Run ESLint for server
         run: cd hangman-server && npm run lint
 
@@ -46,45 +49,29 @@ jobs:
           name: server-coverage-report
           path: hangman-server/coverage
 
-  Check-Client-Code:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Install Vercel CLI for server
+        run: npm install --global vercel@latest
 
-      - name: Set up Node.js for client
-        uses: actions/setup-node@v3
-        with:
-          node-version: '17'
+      - name: Pull Vercel Environment Information for server
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Install client dependencies
-        run: cd src && npm install
+      - name: Deploy Server to Vercel
+        run: cd hangman-server && vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Run ESLint for client
-        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
-
-      - name: Run client tests
-        run: cd src && npm run test -- --coverage
-
-  Deploy-Client:
-    runs-on: ubuntu-latest
-    needs: Check-Client-Code  # Ensure client code has passed checks
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      # Client steps
       - name: Set up Node.js for client
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      - name: Install client dependencies
-        run: cd src && npm install
+      - name: Run ESLint for client
+        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
 
       - name: Build Project Artifacts for Client
         run: |
           cd src
-          echo "REACT_APP_BACKEND_URL=${{ secrets.BACKEND_URL }}" >> .env
+          # Replace <BACKEND_URL> with the actual URL of your backend service.
+          echo "REACT_APP_BACKEND_URL=${{secrets.BACKEND_URL}}" >> .env
           npm run build
 
       - name: Deploy Client to Vercel
