--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -10,7 +10,7 @@ on:
       - dev
 
 jobs:
-  Deploy:
+  Deploy-Client:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,23 +19,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '17'
+          node-version: '16'  # Use the appropriate version for your client
 
-      - name: Install dependencies for server and client
+      - name: Install client dependencies
+        run: cd src && npm install
+
+      - name: Run ESLint for client
+        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
+
+      - name: Run client tests with coverage
+        run: cd src && npm run test -- --coverage
+
+      - name: Check client test coverage
         run: |
-          cd hangman-server && npm install
-          cd ../src && npm install
-
-      # Server steps
-      - name: Run ESLint for server
-        run: cd hangman-server && npm run lint
-
-      - name: Run server tests with coverage
-        run: cd hangman-server && npm run test -- --coverage
-
-      - name: Check server test coverage
-        run: |
-          cd hangman-server
+          cd src
           COVERAGE_THRESHOLD=75
           COVERAGE=$(npx jest --coverage --coverageReporters=text-summary | grep 'All files' | awk '{print $4}' | sed 's/%//')
           if [ "$COVERAGE" -lt "$COVERAGE_THRESHOLD" ]; then
@@ -43,35 +40,11 @@ jobs:
             exit 1
           fi
 
-      - name: Upload server coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: server-coverage-report
-          path: hangman-server/coverage
-
-      - name: Install Vercel CLI for server
-        run: npm install --global vercel@latest
-
-      - name: Pull Vercel Environment Information for server
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy Server to Vercel
-        run: cd hangman-server && vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      # Client steps
-      - name: Set up Node.js for client
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Run ESLint for client
-        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
-
       - name: Build Project Artifacts for Client
         run: |
           cd src
           # Replace <BACKEND_URL> with the actual URL of your backend service.
-          echo "REACT_APP_BACKEND_URL=${{secrets.BACKEND_URL}}" >> .env
+          echo "REACT_APP_BACKEND_URL=${{ secrets.BACKEND_URL }}" >> .env
           npm run build
 
       - name: Deploy Client to Vercel
