--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -19,16 +19,15 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Use the appropriate version for your client
+          node-version: '17'  # Use the appropriate version for your client
 
       - name: Install client dependencies
-        run: cd src && npm install
+        run: cd hangman-client && npm install
 
       - name: Run ESLint for client
-        run: cd src && npx eslint . --format stylish > code-quality-report-client.txt
-
+        run: cd hangman-client && npm run lint
       - name: Run client tests with coverage
-        run: cd src && npm run test -- --coverage
+        run: cd hangman-client && npm run test -- --coverage
 
       - name: Check client test coverage
         run: |
